# muFlowRTFoam

./: .gitignore  Allwclean  Allwmake  EK_in_gwaterFreakFoam.docx  README.md  ld_so  muFlowRT_2310.docx
fvOptions/Make/: files  options
fvOptions/Make/linux64GccDPInt32Opt/: options  sourceFiles  variables
fvOptions/cellSetOption/: cellSetOption.C  cellSetOption.H
fvOptions/constraints/fixedValueConstraints/: myFixedValueConstraint.C  myFixedValueConstraint.H  myfixedValueCo.C
fvOptions/sources/codedSource/: codedSource.C
fvOptions/sources/mySemiImplicitSource/: mySemiImplicitSource.C  mySemiImplicitSource.H  mySemiImplicitSourceI.H  mySemiImplicitSourceIO.C  mysemiImplicitSo.C
libraries/phaseModels/Make/: files
libraries/porousBoundaryConditions/Make/: files  options
libraries/porousBoundaryConditions/darcyGradPressure/: darcyGradPressure.C  darcyGradPressure.H
solvers/: CMakeLists.txt  CMakeLists_bak.txt  CMakeLists_nn.txt  CgiEqn.H  CoatsNo.H  add_mpi.h  budget.H  chem_nn.h  conditions.H  create2phaseFields.H  createFields.H  createThetaFields.H  flow.H  gwaterFoam0.C  gwaterFoam1.C  gwaterFoam2.C  gwaterFoam3.C  gwaterFoam3ek.C  gwaterFoam4.C  hEqn.H  hpEqn.H  hstdEqn.H  log.txt  muFlowRT.C  muFlowRT_bk.C  muFlowRT_mpi.C  muFlowRT_mpi_bak.C  muFlowRTnn.C  myFunc.H  nnBase.h  observation.H  pSEqn.H  plugin_Cgi.H  plugin_Cwi.H  readCoupling.H  readFunc.H  readPicardControls.H  setDeltaT.H  update2phaseFields.H  updateThetaFields.H  (+1 more)
solvers/EK/: DebyeHuckel.H  NernstPlanck.H  createEKFields.H  createSpciFields.H
solvers/Make/: files  options
solvers/Make/linux64GccDPInt32Opt/: files  muFlowRT.C.dep  options  sourceFiles  variables
solvers/darcyFoam/: createFields.H  createFieldsT.H  darcyFoam.C  darcyFoamT.C  setDeltaT.H
solvers/darcyFoam/Make/: files  options
solvers/darcyFoam/Make/linux64GccDPInt32Opt/: darcyFoam.C.dep  darcyFoamT.C.dep  options  sourceFiles  variables
solvers/flow/: create2phaseFields.H  createThetaFields.H  hEqn.H  hpEqn.H  hstdEqn.H  pSEqn-bk.H  pSEqn.H  pSEqn1.H  update2phaseFields.H  update2phaseFields_bk.H  updateThetaFields.H
solvers/phreeqc/: CMakeLists.txt  initPhreeqc.H  initPhreeqc_bak.H  initPhreeqc_mpi.H  initPhreeqc_mpi_bak.H  initPhreeqc_pc.H  main_mpi.cpp  nnFreakFirst.H  runFreak.cpp  runFreak1.cpp  runFreak2 - Copie.cpp  runFreak2.cpp  runFreak_bk.cpp
solvers/plugins/: plugin_Cgi.H  plugin_Cgiupdate.H  plugin_Cwi.H  plugin_H.H  plugin_PS.H  plugin_PSupdate.H
solvers/transport/: C1xEqn.H  CEqn.H  CgiEqn.H  CwEqn.H  CwEqnStd.H  CwiEqn.H  TEqn.H  adaptiveReactiveDdtScheme.H  createC1xFields.H  createCFields.H  createCgiFields.H  createCwFields.H  createCwiFields.H  createTFields.H  setDeltaTtrsp.H  setDeltaTtrspNspec.H  torch.h  transport.H
tutorials/1ddispersion/: 1ddispersion.orti
tutorials/1ddispersion/0/: Cw  T  Ug  Uw  h  hp  p  phiw  sw
tutorials/1ddispersion/17280/: Cw  T  Ug  Uw  h  hp  p  phiw  sw
tutorials/1ddispersion/25920/: Cw  T  Ug  Uw  h  hp  p  phiw  sw
tutorials/1ddispersion/34560/: Cw  T  Ug  Uw  h  hp  p  phiw  sw
tutorials/1ddispersion/43200/: Cw  T  Ug  Uw  h  hp  p  phiw  sw
tutorials/1ddispersion/51840/: T  Ug  Uw  h  hp  p  phiw  sw
tutorials/1ddispersion/69120/: T  Ug  Uw  h  hp  p  phiw  sw
tutorials/1ddispersion/8640/: Cw  T  Ug  Uw  h  hp  p  phiw  sw
tutorials/1ddispersion/86400/: T  Ug  Uw  h  hp  phiw
tutorials/1ddispersion/constant/: Kd  Kh  Kv  eps  n_vg  thk  transportProperties
tutorials/1ddispersion/system/: controlDict  writeInterval.01  writeInterval.02  writeInterval.03  writeInterval.04  writeInterval.05  writeInterval.06  writeInterval.07  writeInterval.08  writeInterval.09  writeInterval.10
tutorials/1dunsat/: 1dunsat.orti  initChem.pqi  initChem.pqo  phq_out.chem.txt  phqfoam.txt  phqinit.txt
tutorials/1dunsat/0/: Ug  h  hp  hp_bk  sw
tutorials/1dunsat/172800/: Cg0  Cg1  Cg2  Cg3  Cw0  Cw1  Cw10  Cw2  Cw3  Cw4  Cw5  Cw6  Cw7  Cw8  Cw9  Species  Uw  h  hp  p  phig  phiw  sw
tutorials/1dunsat/259200/: Cg0  Cg1  Cg2  Cg3  Cw0  Cw1  Cw10  Cw2  Cw3  Cw4  Cw5  Cw6  Cw7  Cw8  Cw9  Species  T  Ug  Uw  h  hp  p  phig  phiw  sw
tutorials/1dunsat/345600/: Cg0  Cg1  Cg2  Cg3  Cw0  Cw1  Cw10  Cw2  Cw3  Cw4  Cw5  Cw6  Cw7  Cw8  Cw9  Species  T  Ug  Uw  h  hp  p  phig  phiw  sw
tutorials/1dunsat/432000/: Cg0  Cg1  Cg2  Cg3  Cw0  Cw1  Cw10  Cw2  Cw3  Cw4  Cw5  Cw6  Cw7  Cw8  Cw9  Species  T  Ug  Uw  h  hp  p  phig  phiw  sw
tutorials/1dunsat/518400/: Cg0  Cg1  Cg2  Cg3  Cw0  Cw1  Cw10  Cw2  Cw3  Cw4  Cw5  Cw6  Cw7  Cw8  Cw9  Species  T  Ug  Uw  h  hp  p  phig  phiw  sw
tutorials/1dunsat/604800/: Cg0  Cg1  Cg2  Cg3  Cw0  Cw1  Cw10  Cw2  Cw3  Cw4  Cw5  Cw6  Cw7  Cw8  Cw9  Species  T  Ug  Uw  h  hp  p  phig  phiw  sw
tutorials/1dunsat/691200/: Cg0  Cg1  Cg2  Cg3  Cw0  Cw1  Cw10  Cw2  Cw3  Cw4  Cw5  Cw6  Cw7  Cw8  Cw9  Species  Uw  h  hp  p  phig  phiw  sw
tutorials/1dunsat/777600/: Cg0  Cg1  Cg2  Cg3  Cw0  Cw1  Cw10  Cw2  Cw3  Cw4  Cw5  Cw6  Cw7  Cw8  Cw9  Species  T  Ug  Uw  h  hp  p  phig  phiw  sw
tutorials/1dunsat/86400/: Cg0  Cg1  Cg2  Cg3  Cw0  Cw1  Cw10  Cw2  Cw3  Cw4  Cw5  Cw6  Cw7  Cw8  Cw9  Species  Uw  h  hp  p  phig  phiw  sw
tutorials/1dunsat/864000/: Cg0  Cg1  Cg2  Cg3  Cw0  Cw1  Cw10  Cw2  Cw3  Cw4  Cw5  Cw6  Cw7  Cw8  Cw9  Species  Uw  h  hp  p  phig  phiw  sw
tutorials/1dunsat/constant/: Kh  Kv  alpha_vg  eps  fvOption.txt  fvOptions  g  n_vg  thk  transportProperties  zbot
tutorials/1dunsat/system/: blockMeshDict  controlDict  fvSchemes  writeInterval  writeInterval.00  writeInterval.02  writeInterval.03  writeInterval.04  writeInterval.05  writeInterval.06  writeInterval.07  writeInterval.08  writeInterval.09  writeInterval.10  writeInterval.11  writeInterval.12
tutorials/diagTransp/: diagTransp.orti  diagTransp_out.msh  gm_in.txt
tutorials/diagTransp/0/: Cw  Uw  h  hp  p  sw
tutorials/diagTransp/10368000/: Cw  T  Ug  Uw  h  hp  p  phiw  sw
tutorials/diagTransp/11232000/: Cw  (+8 more)
(+411 files in other folders)
